--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
     "@aws-cdk/assert": "^2.29.0",
     "@types/jest": "^26.0.24",
     "@types/node": "10.17.27",
+    "@types/prettier": "^2.6.3",
     "aws-cdk": "^2.29.0",
     "aws-cdk-lib": "^2.29.0",
     "jest": "^26.6.3",
     "ts-jest": "^26.5.6",
     "ts-node": "^9.1.1",
-    "typescript": "~3.9.7"
+    "typescript": "~4.6.3"
   },
   "dependencies": {
     "@aws-cdk/assert": "^2.29.0",
