--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,19 @@
+# Ignore Gradle project-specific cache directory
+.gradle
 .vs
-*.js
-!infrastructure/jest.config.js
-*.d.ts
-node_modules
+
+# Ignore Gradle build output directory
+software/**/build/
+software/**/.idea/
+software/ap-lambda-js/dist/
+
+infrastructure/node_modules/
+infrastructure/**/*.js
+
+infrastructure/.vs
+infrastructure/!jest.config.js
+infrastructure/**/*.d.ts
 
 # CDK asset staging directory
-.cdk.staging
-cdk.out
-
-
-lib/**/*.js
+infrastructure/.cdk.staging
+infrastructure/cdk.out/
