Initial pipeline with alpha and beta stage

--- a/software/lambda-js/package.json
+++ b/software/lambda-js/package.json
@@ -7,7 +7,7 @@
     "postinstall": "npm rebuild grpc --target=14.17.3 --target_arch=x64 --target_platform=linux --target_libc=glibc",
     "start": "ts-node src/index.ts",
     "build": "rm -rf dist/ && node build.js",
-    "postbuild": "cp -r node_modules/grpc/src/* dist/src/ && cp -r node_modules/grpc/deps dist/src && cp node_modules/grpc/package.json dist/ && cd dist && zip -r lambda.zip *",
+    "postbuild": "cd dist && zip -r lambda.zip *",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
